[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Sathis Kumar Muthusamy <smuthusamy@atlassian.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.19"
tokio = { version = "0.2", features = ["full"] }
regex = "1.3.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
